[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-caller"
version = "0.1.0"
description = "AI Agent Caller with Streamlit"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
  "streamlit>=1.0",
  "requests",
  "vapi-python"
]
